--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel client/index.html",
-    "server": "parcel server/index.js"
+    "server": "parcel server/index.js",
+    "build-client": "parcel build client/index.html -d dist/client",
+    "build-server": "parcel build server/index.js --target node -d dist/server",
+    "build-run": "yarn build-server && yarn build-client && node dist/server/index.js"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.3"
